2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/geometry.c (get_window_borders):
	fixed calculation of $[cw.y] and $[cw.height]

	* fvwm/move_resize.c (resize_move_window):
	windows are mo longer hilighted after ResizeMove or ResizeMoveMaximize

2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (resize_move_window):

2002-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	re-added with-xinerama-emulation option that was removed recently

2002-02-28  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	* NEWS:
	* fvwm/fvwm2.1:
	several corrections and rewording

2002-02-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm2.1:
	New section FONT NAMES AND FONT LOADING

	* INSTALL.fvwm:
	* NEWS:
	Document --enable-xft

	* libs/Fft.c (get_FlocaleXftFont):
	Used the xft font height in the place of ascent+descent

	* fvwm/icons.c (DrawIconWindow):
	Fixed the fg colors of the icon title

2002-02-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CMD_CondCase):
	fixed CondCase command
	(CMD_Cond):
	fixed numeric return codes

	* fvwm/add_window.c (CMD_Recapture):
	fixed focus loss w/ SloppyFocus and MouseFocus after RecaptureWindow

	* aclocal.m4 (smr_CHECK_LIB):
	* acinclude.m4 (smr_CHECK_LIB):
	disabled a destructing gnome_prefix logic again

	* fvwm/events.c (GetContext):
	* libs/Bindings.c (win_contexts):
	* libs/fvwmlib.h:
	new contexts for individual parts of the window border

2002-02-26  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4:
	disabled a destructing gnome_prefix logic

	* configure.in:
	replaced fribidi detection mechanism, now fribidi-config is used

2002-02-26  olicha  <olivier.chapuis@free.fr>

	* acconfig.h (HAVE_XFT):
	* acinclude.m4:
	* configure.in:
	* libs/Fft.c (new file):
	* libs/Flocale.c (FlocaleLoadFont):
	(FlocaleUnloadFont):
	(FlocaleDrawString):
	(FlocaleTextWidth):
	(get_FlocaleFontSet):
	(get_FlocaleFont):
	(get_FlocaleFontOrFontSet):
	* libs/Flocale.h:
	* fvwm/Makefile.am: