@@ -8,13 +8,14 @@ SUBDIRS = libs \
 	fvwm \
 	modules \
 	utils \
-	perllib \
+	$(FVWM_PERLLIB) \
 	docs \
 	rpm \
 	sample.fvwmrc \
 	tests
 
 EXTRA_DIST = INSTALL.fvwm \
+	perllib \
 	vms/README \
 	vms/config.h \
 	vms/fvwmrc.dat \
