@@ -463,30 +463,42 @@ AC_MSG_RESULT($have_codeset)
 
 
 dnl ********* fribidi
-dnl $UNSET ac_cv_header_fribidi_fribidi_h
-dnl $UNSET ac_cv_lib_fribidi_fribidi_log2vis
-dnl smr_CHECK_LIB(fribidi, , bi-directional text support, fribidi_log2vis,
-dnl 	fribidi/fribidi.h)
+AC_ARG_ENABLE(bidi,
+	[  --disable-bidi          disable bi-directional text support],
+	[ if test "$enableval" = yes; then
+		with_bidi="yes, check"
+	else
+		with_bidi="no"
+		problem_bidi=": Explicitly disabled"
+	fi ],
+	[ with_bidi="not specified, check" ]
+)
 
-# This may be a macro somewhen
-AC_ARG_WITH(fribidi-bindir,
-	[  --with-fribidi-bindir=DIR  directory of fribidi-config if not in PATH],
-	FRIBIDI_BINDIR="$withval", FRIBIDI_BINDIR=".")
-AC_PATH_PROG(FRIBIDI_CONFIG, fribidi-config, , "${FRIBIDI_BINDIR}:$PATH")
+if test "$with_bidi" != "no"; then
+	dnl $UNSET ac_cv_header_fribidi_fribidi_h
+	dnl $UNSET ac_cv_lib_fribidi_fribidi_log2vis
+	dnl smr_CHECK_LIB(fribidi, , bi-directional text support,
+	dnl 	fribidi_log2vis, fribidi/fribidi.h)
 
-if test -z "$FRIBIDI_CONFIG"; then
-	with_fribidi=no
-	problem_fribidi=": No fribidi-config found in PATH"
-else
-	fribidi_CFLAGS=`$FRIBIDI_CONFIG --cflags`
-	fribidi_LIBS=`$FRIBIDI_CONFIG --libs`
-	AC_CHECK_LIB(fribidi, fribidi_log2vis,
-		with_fribidi=yes; problem_fribidi=,
-		with_fribidi=no; problem_fribidi=": No good libs via fribidi-config",
-		[$fribidi_LIBS $fribidi_CFLAGS])
+	AC_ARG_WITH(fribidi-bindir,
+		[  --with-fribidi-bindir=DIR  directory of fribidi-config if not in PATH],
+		FRIBIDI_BINDIR="$withval", FRIBIDI_BINDIR=".")
+	AC_PATH_PROG(FRIBIDI_CONFIG, fribidi-config,, "${FRIBIDI_BINDIR}:$PATH")
+
+	if test -z "$FRIBIDI_CONFIG"; then
+		with_bidi=no
+		problem_bidi=": No fribidi-config found in PATH"
+	else
+		fribidi_CFLAGS=`$FRIBIDI_CONFIG --cflags`
+		fribidi_LIBS=`$FRIBIDI_CONFIG --libs`
+		AC_CHECK_LIB(fribidi, fribidi_log2vis,
+			with_bidi=yes; problem_bidi=,
+			with_bidi=no; problem_bidi=": No good libs via fribidi-config",
+			[$fribidi_LIBS $fribidi_CFLAGS])
+	fi
 fi
 
-if test "$with_fribidi" = "no"; then
+if test "$with_bidi" = "no"; then
 	fribidi_CFLAGS=
 	fribidi_LIBS=
 fi
@@ -494,6 +506,20 @@ test "$fribidi_LIBS" && AC_DEFINE(HAVE_FRIBIDI)
 AC_SUBST(fribidi_LIBS)
 AC_SUBST(fribidi_CFLAGS)
 
+
+dnl ********* perllib
+with_perllib="yes"
+problem_perllib=""
+FVWM_PERLLIB=perllib
+AC_ARG_ENABLE(perllib,
+	[  --disable-perllib       disable installing FVWM perl library],
+	[ if test "$enableval" = no; then
+		with_perllib="no"
+		problem_perllib=": Explicitly disabled"
+		FVWM_PERLLIB=""
+	fi ],
+)
+AC_SUBST(FVWM_PERLLIB)
 
 dnl Check for REQUIRED headers and functions before going any
 dnl further.
@@ -688,13 +714,14 @@ esac
 
 
 # mainly for fvwm-config
+AC_SUBST(with_bidi)
 AC_SUBST(with_ewmh)
-AC_SUBST(with_fribidi)
 AC_SUBST(with_gnomehints)
 AC_SUBST(with_gtk)
 AC_SUBST(with_gdkimlib)
 AC_SUBST(with_gnomelibs)
 AC_SUBST(with_multibyte)
+AC_SUBST(with_perllib)
 AC_SUBST(with_readline)
 AC_SUBST(with_rplay)
 AC_SUBST(with_shape)
@@ -713,7 +740,9 @@ utils/Makefile utils/fvwm-config
 utils/fvwm-menu-xlock utils/fvwm-menu-directory
 utils/fvwm-menu-desktop utils/fvwm-menu-headlines
 utils/fvwm24_convert utils/fvwmbug
-perllib/Makefile perllib/FVWM/Makefile
+perllib/Makefile
+perllib/General/Makefile
+perllib/FVWM/Makefile
 perllib/FVWM/Module/Makefile perllib/FVWM/Module.pm
 rpm/Makefile rpm/fvwm.spec docs/fvwm.lsm
 docs/Makefile sample.fvwmrc/Makefile tests/Makefile
@@ -779,6 +808,7 @@ eval my_mandir="`eval echo ${mandir}`"
 eval my_moddir="`eval echo ${FVWM_MODULEDIR}`"; eval my_moddir="$my_moddir"
 eval my_datdir="`eval echo ${FVWM_DATADIR}`"
 eval my_plldir="`eval echo ${FVWM_PERLLIBDIR}`"
+test -z "$FVWM_PERLLIB" && my_plldir="(Not installed) $my_plldir"
 
 case "$with_gtk" in
   yes) fvwmgtk_msg="
@@ -798,8 +828,8 @@ FVWM Configuration:
   Data files:  $my_datdir
   Perl lib:    $my_plldir
 
+  With Bi-directional text support?   $with_bidi$problem_bidi
   With Extended Window Manager Hints? $with_ewmh$problem_ewmh
-  With Bi-directional text support?   $with_fribidi$problem_fribidi
   With GNOME Window Manager Hints?    $with_gnomehints$problem_gnomehints
   With GTK support for FvwmGtk?       $with_gtk$problem_gtk$fvwmgtk_msg
   With Multibyte support?             $with_multibyte$problem_multibyte
