@@ -1,3 +1,10 @@
+2002-03-03  Mikhael Goikhman  <migo@homemail.com>
+
+	* INSTALL.fvwm:
+	* Makefile.am:
+	* configure.in:
+	added and documented --disable-bidi and --disable-perllib
+
 2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/geometry.c (get_window_borders):
